# libgedit-gtksourceview

./: AUTHORS  HACKING  Makefile.am  NEWS  README  README.md  configure.ac  gtksourceview.doap  libgedit-gtksourceview.doap  libgedit-gtksourceview.pc.in  meson.build  meson_options.txt
data/: Makefile.am  meson.build
data/language-specs/: Makefile.am  check-language.sh  language-specs.pot  nix.lang
data/style-schemes/: Makefile.am  check-style-schemes.sh  classic.xml  meson.build  style-schemes.pot  style-schemes.rng  test.sh  update-pot.sh
data/style-schemes/default-style-schemes/: Makefile.am  classic.xml  cobalt.xml  kate.xml  oblivion.xml  solarized-dark.xml  solarized-light.xml  tango.xml
data/styles/: tango.xml
docs/: Makefile.am
docs/html/: index.html  style-scheme-file-format-changes.html  style-scheme-file-format.html  style-schemes.html
docs/html/styles/: main.css  print.css
docs/reference/: Makefile.am  intro.xml  intro.xml.in  lang-reference.xml  lang-reference.xml.in  lang-tutorial.xml  libgedit-gtksourceview-300-sections.txt  libgedit-gtksourceview-docs.xml  libgedit-gtksourceview-docs.xml.in  libgedit-gtksourceview-sections.txt  meson.build  porting-guides.xml  style-reference.xml  style-reference.xml.in
docs/reference/xml/: gtkdocentities.ent.in  meson.build
gtksourceview/: Makefile.am  gtksource-enumtypes.c.in  gtksource-enumtypes.h.in  gtksource.h  gtksourceautocleanups.h  gtksourcebuffer.c  gtksourcebuffer.h  gtksourcecompletion.c  gtksourcecompletion.h  gtksourcecompletioncontext.h  gtksourcecompletioninfo.h  gtksourcecompletionitem.h  gtksourcecompletionmodel.c  gtksourcecompletionproposal.h  gtksourcecompletionprovider.h  gtksourcecontextengine.c  gtksourceencoding.h  gtksourceengine.h  gtksourcefile.h  gtksourcefileloader.h  gtksourcefilesaver.h  gtksourcegutter.c  gtksourcegutter.h  gtksourcegutterrenderer.h  gtksourcegutterrendererpixbuf.h  gtksourcegutterrenderertext.h  gtksourceinit.h  gtksourcelanguage-parser-2.c  gtksourcelanguage.h  gtksourcelanguagemanager.h  gtksourcemark.h  gtksourcemarkattributes.h  gtksourcepixbufhelper.c  gtksourceprintcompositor.h  gtksourceregex.c  gtksourceregion.c  gtksourceregion.h  gtksourcesearchcontext.c  gtksourcesearchcontext.h  gtksourcesearchsettings.h  (+29 more)
gtksourceview/completion-providers/words/: Makefile.am  gtksourcecompletionwords.c  gtksourcecompletionwords.h  gtksourcecompletionwordsbuffer.c  meson.build
interactive-tests/: test-widget.c
po/: LINGUAS  Makevars  POTFILES.in  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  (+47 more)
tests/: Makefile.am  test-widget.c  test-widget.ui
tests/interactive-tests/: meson.build  test-search.c
tests/unit-tests/: Makefile.am  meson.build  test-buffer.c  test-completion-words.c  test-language-specs.c  test-language.c  test-languagemanager.c  test-printcompositor.c  test-regex.c  test-region.c  test-search-context.c  test-style.c  test-stylescheme.c  test-styleschememanager.c  test-styleschemeparser.c  test-undo-manager.c  test-utils.c  test-view.c
tests/unit-tests/datasets/style-schemes/basics/: classic.xml  test.xml
tests/unit-tests/datasets/style-schemes/others/: use-style-chain.xml
tests/unit-tests/datasets/style-schemes/parents/: base.xml  child.xml  grand-child.xml
tests/unit-tests/datasets/style-schemes/parents-ref-cycle/: test1.xml  test2.xml
tests/unit-tests/datasets/style-schemes/parsing-errors/: 001-no-style-scheme-attributes.xml  002-nested-style-scheme-elements.xml  003-two-style-scheme-elements.xml  004-empty-id.xml  005-no-name.xml  006-empty-names.xml  007-two-names.xml  008-two-descriptions.xml  010-bad-version.xml  011-color-missing-value.xml  012-color-empty-name.xml  013-color-dups.xml  014-color-bad-value.xml  015-style-bad-color-value.xml  016-style-bad-italic.xml  017-style-bad-scale.xml  018-style-empty-name.xml  019-style-dups.xml  020-style-name-only.xml  021-style-use-style-plus-other-attr.xml  022-style-bad-use-style.xml  023-empty-description.xml  024-use-style-cycle.xml  025-bad-kind.xml
tests/unit-tests/datasets/style-schemes/unknown-parent/: test-unknown-parent.xml
testsuite/: Makefile.am  test-completion-model.c  test-iter.c  test-language.c  test-mark.c  test-search-context.c  test-space-drawer.c  test-stylescheme.c  test-styleschememanager.c  test-utils.c
tools/list-langs/: list-langs.c  meson.build
